vendor/feedvalidator/demo/testcases/opml/errors/missingHead.opml
<?xml version="1.0" encoding="ISO-8859-1"?>

<!--
  Description:  Missing head
  Expect:       MissingElement{element:head, parent:opml}
-->

<opml version="1.1">
	<body>
		<outline text="This example is missing a top-level head element."/>
		</body>
	</opml>
